# etch

./: Cargo.toml  PROTOCOL.md  README.md  test.txt  test.txt.etch  test_manual.txt  test_manual.txt.etch  test_run.txt  test_run.txt.etch  test_v.txt.etch
.junie/memory/: feedback.md  language.json
src/: analyzer.rs  chain.rs  fingerprint.rs  identity.rs  lib.rs  main.rs  main.rs.etch  notary.rs  verify.rs  verify.rs.etch
tests/: integration_test.rs
