[package]
name = "etch"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
chrono = "0.4"
dirs = "5.0"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
