[package]
name = "etch"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
chrono = "0.4"
dirs = "5.0"
rand = "0.8"
tree-sitter = "0.24.6"
tree-sitter-rust = "0.23.2"
tree-sitter-python = "0.23.5"
tree-sitter-javascript = "0.23.1"
tree-sitter-typescript = "0.23.2"
streaming-iterator = "0.1.9"

[dev-dependencies]
tempfile = "3"
